--- a/.github/workflows/weather_scraper.yml
+++ b/.github/workflows/weather_scraper.yml
@@ -9,9 +9,13 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # This is required for pushing to the repository
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} # Use the automatic GITHUB_TOKEN
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -36,4 +40,4 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add data/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update weather data" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update weather data" && git push origin HEAD:main)
